<resources>
    <string name="app_name">Floney</string>
    <string name="is_first">isFirst</string>
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_analysis">분석</string>
    <string name="bottom_navigation_calculate">정산</string>
    <string name="bottom_navigation_mypage">마이</string>
    <string name="date_pick_button">완료</string>
    <string name="already_pick_button">확인</string>
    <string name="default_error_text">에러가 발생하였습니다. 플로니 팀에 문의 해주세요.</string>
    <string name="detail_empty_record_message">캘린더 내역 작성해주세요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_verification_text">- 유효 시간이 지났을 경우 인증 메일을 다시 보내주세요. \n- 하루동안 5번까지 새로운 인증 코드를 받을 수 있습니다. \n- 5번 연속 코드 입력에 실패했다면 24시간 이후 시도해 주세요.</string>
    <string name="sign_input_text">* 영문(대소문자 구분 없음), 숫자, 특수문자 포함 8자 이상</string>
    <string name="sign_length_limit_text">* 최대 8자까지 입력할 수 있어요.</string>
    <string name="sign_complete_text">플로니와 함께 똑똑하고 편리한 가계부를 작성해보세요.</string>
    <string name="on_board_record_text">함께, 간편하게\n가계부를 기록해 보세요</string>
    <string name="on_board_show_flow_text">모으고 사용한 흐름을\n한눈에 볼 수 있어요</string>
    <string name="on_board_start_text">기록한 내역으로\n손쉽게 정산할 수 있어요</string>
    <string name="on_board_skip_text">건너뛰기</string>
    <string name="on_board_start_button_text">플로니 시작하기</string>
    <string name="login">로그인하기</string>
    <string name="nickname">닉네임</string>
    <string name="request_nickname">닉네임을 입력하세요.</string>
    <string name="request_input_nickname">닉네임을 입력해주세요.</string>
    <string name="nickname_rule">* 최대 8자까지 입력할 수 있어요.</string>
    <string name="email">이메일</string>
    <string name="request_input_email">이메일 주소를 입력하세요.</string>
    <string name="request_input_email_toast">이메일 주소를 입력해주세요.</string>
    <string name="email_address">이메일 주소</string>
    <string name="request_input_password">비밀번호를 입력해주세요.</string>
    <string name="request_input_re_password">비밀번호 확인을 입력해주세요.</string>
    <string name="check_password_rule">비밀번호 양식을 확인해주세요.</string>
    <string name="not_match_password">비밀번호가 일치하지 않습니다.</string>
    <string name="re_password">비밀번호 확인</string>
    <string name="password_rule">비밀번호 양식을 확인해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="sign_up">회원가입 하기</string>
    <string name="simple_login">간편 로그인</string>
    <string name="currency_error">화폐 단위를 불러오지 못했습니다.</string>
    <string name="signup_rule">* 영문(대소문자 구분 없음), 숫자, 특수문자 포함 8자 이상</string>
    <string name="find_password_text">가입한 이메일 주소를 입력하세요.\n로그인 가능한 임시 비밀번호를 보내드립니다.</string>
    <string name="send_temp_password">임시 비밀번호 보내기</string>
    <string name="mypage_main_mypage_text">마이페이지</string>
    <string name="mypage_main_appstore_text">앱스토어에서\n별점을 남겨주세요</string>
    <string name="mypage_main_appstore_write_text">리뷰쓰기</string>
    <string name="mypage_main_suppose_text">플로니는 여러분의\n다양한 의견을\n기다리고 있어요</string>
    <string name="mypage_main_suppose_write_text">제안하기</string>
    <string name="mypage_main_my_wallet">내 가계부</string>
    <string name="mypage_main_user_soppose_text1">고객지원</string>
    <string name="mypage_main_user_soppose_text2">문의하기</string>
    <string name="mypage_main_user_soppose_text3">공지사항</string>
    <string name="mypage_main_user_soppose_text4">리뷰 작성하기</string>
    <string name="mypage_main_user_soppose_text5">개인정보 처리방침</string>
    <string name="mypage_main_user_soppose_text6">이용 약관</string>
    <string name="member_count_format">%1$s명</string>
    <string name="mypage_main_setting_text">설정</string>
    <string name="mypage_main_setting_text1">알림 설정</string>
    <string name="mypage_main_setting_text2">언어 설정</string>
    <string name="mypage_main_setting_text3">Version 1.1</string>
    <string name="mypage_main_setting_text4">마케팅 정보 수신 알림</string>
    <string name="mypage_main_setting_text5">한국어</string>
    <string name="mypage_main_setting_marketing_response">마케팅 정보 수신 알림이 변경되었습니다.</string>
    <string name="mypage_main_inform_title">회원 정보</string>
    <string name="mypage_main_inform_nickname">닉네임</string>
    <string name="mypage_main_inform_nickname_tint">닉네임을 입력하세요.</string>
    <string name="mypage_main_inform_change_button">변경하기</string>
    <string name="mypage_main_inform_change_profile">프로필 이미지 변경</string>
    <string name="mypage_main_inform_change_passwd">비밀번호 변경</string>
    <string name="mypage_main_inform_logout">로그아웃</string>
    <string name="mypage_main_inform_logout_dialog_info">로그아웃 하시겠습니까?</string>
    <string name="mypage_main_inform_exit"><u>회원탈퇴</u></string>
    <string name="mypage_main_inform_nickname_request">닉네임을 입력해주세요.</string>
    <string name="mypage_main_inform_nickname_request_success">변경이 완료되었습니다.</string>
    <string name="mypage_main_inform_pwchange_title">비밀번호 변경</string>
    <string name="mypage_main_inform_pwchange_nowpw">현재 비밀번호</string>
    <string name="mypage_main_inform_pwchange_nowpw_tint">현재 비밀번호를 입력하세요.</string>
    <string name="mypage_main_inform_pwchange_newpw">새 비밀번호</string>
    <string name="mypage_main_inform_pwchange_newpw_tint">영문 대소문자, 숫자, 특수문자 포함 8자 이상</string>
    <string name="mypage_main_inform_pwchange_newpw_check">새 비밀번호 확인</string>
    <string name="mypage_main_inform_pwchange_newpw_check_tint">영문 대소문자, 숫자, 특수문자 포함 8자 이상</string>
    <string name="mypage_main_inform_pwchange_check_button">확인</string>
    <string name="mypage_main_inform_pwchange_nowpw_request">현재 비밀번호를 입력해주세요.</string>
    <string name="mypage_main_inform_pwchange_request_input_password">새 비밀번호를 입력해주세요.</string>
    <string name="mypage_main_inform_pwchange_request_input_re_password">새 비밀번호 확인을 입력해주세요.</string>
    <string name="mypage_main_inform_pwchange_check_password_rule">비밀번호 양식을 확인해주세요.</string>
    <string name="mypage_main_inform_pwchange_not_match_password">새 비밀번호가 일치하지 않습니다.</string>
    <string name="mypage_main_inform_profile_change">프로필 이미지 변경</string>
    <string name="mypage_main_inform_profile_change_basic">기본 프로필로 변경</string>
    <string name="mypage_main_inform_profile_change_btn">변경하기</string>
    <string name="mypage_main_inform_exit_title">회원탈퇴 전\n이유를 선택해주세요 😥</string>
    <string name="mypage_main_inform_exit_info">잠깐! 탈퇴 시 가계부 기록이\n모두 삭제 됩니다.</string>
    <string name="mypage_main_inform_exit_no_how_to_use">플로니를 어떻게 사용하는지 모르겠어요</string>
    <string name="mypage_main_inform_exit_expensive">구독료가 비싸요</string>
    <string name="mypage_main_inform_exit_no_already_use">자주 사용하지 않게 돼요</string>
    <string name="mypage_main_inform_exit_re_login">다시 가입할 거예요</string>
    <string name="mypage_main_inform_exit_direct_input">직접 입력하기</string>
    <string name="mypage_main_inform_exit_direct_input_hint">이유를 작성해 주세요 (100자 이내)</string>
    <string name="mypage_main_inform_exit_button">탈퇴하기</string>
    <string name="mypage_main_inform_exit_blank_toast">탈퇴 이유를 작성해주세요.</string>
    <string name="mypage_main_inform_exit_check_toast">탈퇴 이유를 선택해주세요.</string>
    <string name="mypage_main_inform_exit_input_password_title">마지막으로 비밀번호를\n입력해 주세요.</string>
    <string name="mypage_main_inform_exit_input_password_hint">비밀번호</string>
    <string name="mypage_main_inform_exit_input_password_button">탈퇴하기</string>
    <string name="mypage_main_inform_exit_input_password_toast">비밀번호를 입력해 주세요.</string>
    <string name="mypage_main_inform_exit_popup_title">탈퇴 전에 꼭 확인해 주세요</string>
    <string name="mypage_main_inform_exit_popup_info">-가계부 방장일 경우 팀원에게\n방장이 자동으로 위임되며 가계부를 나가게 됩니다.\n\n-가계부 팀원일 경우 즉시 가계부를 나가게 됩니다.\n\n-모든 사용자는 회원탈퇴 시 모든 가계부 및\n데이터, 개인정보가 즉시 파기됩니다.
\n\n그래도 탈퇴하시겠습니까?</string>
    <string name="mypage_main_inform_exit_popup_btn_exit">탈퇴하기</string>
    <string name="mypage_main_inform_exit_popup_btn_cancel">취소하기</string>
    <string name="mypage_main_inform_exit_complete_title">회원 탈퇴가\n무사히 완료되었어요</string>
    <string name="mypage_main_inform_exit_complete_info">이용해 주셔서 감사합니다.\n언제든 다시 돌아오세요!</string>
    <string name="mypage_main_inform_exit_complete_btn_close">닫기</string>
    <string name="mypage_service_mail_title">플로니가 출시되었어요🍀</string>
    <string name="mypage_service_mail_info">안녕하세요!\n공유가계부 플로니가 출시되었습니다.\n사용 중 궁금하거나 불편한 점이 있으시면 문의하기를 통해\n메일로 물어봐 주시면 언제든지 친절하게 답변해 드립니다.\n\n많은 이용과 관심 부탁드립니다.\n감사합니다.</string>
    <string name="camera">사진 촬영하기</string>
    <string name="gallery">앨범에서 사진 선택</string>
    <string name="random_image">랜덤 이미지</string>
    <string name="choose_image_source">프로필 변경</string>
    <string name="sign_up_exist_email">이미 등록된 이메일입니다.</string>
    <string name="sign_up_request_valid_email">유효한 이메일을 입력해주세요.</string>
    <string name="sign_up_request_email">이메일 주소를 입력해주세요.</string>
    <string name="sign_up_request_email_hint">이메일을 입력해주세요.</string>
    <string name="sign_up_valid_email">이메일 인증하기</string>
    <string name="sign_up_valid_email_text">이메일 인증을 위해 사용 가능한\n이메일을 입력해주세요</string>
    <string name="sign_up_send_mail">메일 보내기</string>
    <string name="sign_up_agree_of_terms">약관 동의</string>
    <string name="sign_up_all_agree_of_terms">전체 동의</string>
    <string name="sign_up_terms_text_1">서비스 이용 약관 (필수)</string>
    <string name="sign_up_terms_text_2">개인정보 수집 및 이용 동의 (필수)</string>
    <string name="sign_up_terms_text_3">마케팅 정보 수신 동의 (선택)</string>
    <string name="sign_up_terms_text_4">만 14세 이상 확인 (필수)</string>
    <string name="sign_up_next">다음으로</string>
    <string name="sign_up_error_terms">필수 약관에 모두 동의해주세요.</string>
    <string name="sign_up_input_code">인증 코드 입력</string>
    <string name="sign_up_input_code_text">이메일로 전송된 코드를\n하단에 입력해주세요.</string>
    <string name="sign_up_input_code_info_text">- 유효 시간이 지났을 경우 인증 메일을 다시 보내주세요.\n- 하루동안 5번까지 새로운 인증 코드를 받을 수 있습니다.\n- 5번 연속 코드 입력에 실패했다면 24시간 이후 시도해 주세요.</string>
    <string name="sign_up_expired_code">유효 시간이 초과되었습니다. 다시 시도해주세요.</string>
    <string name="sign_up_not_valid_code">코드가 올바르지 않습니다.</string>
    <string name="sign_up_request_input_code">코드를 입력해주세요</string>
    <string name="sign_up_input_sign_up_info">가입 정보 입력</string>
    <string name="sign_up_complete_text">환영합니다\n%1$s님!</string>
    <string name="sign_up_complete_text_detail">플로니와 함께 똑똑하고 편리한 가계부를\n작성해부세요.</string>
    <string name="sign_up_start_floney">플로니 시작하기</string>
    <string name="book_add_invite_check_code_title">초대받은 가계부\n코드가 있나요?</string>
    <string name="book_add_invite_check_code_info">친구에게 받은 코드를 입력하거나\n코드가 없다면 가계부를 새로 만들 수 있어요.</string>
    <string name="book_add_invite_check_code_input_hint">코드를 입력하세요.</string>
    <string name="book_add_invite_check_code_complete_button_text">입력 완료하기</string>
    <string name="book_add_invite_check_code_new_book_add_button_text">새 가계부 만들기</string>
    <string name="book_add_invite_success_title">가계부에\n초대되었어요!</string>
    <string name="book_add_invite_success_info">간편하고 쉬운 가계부, 플로니와 함께해요</string>
    <string name="book_add_invite_success_button_text">작성하러 가기</string>
    <string name="book_add_invite_check_request_empty_code">코드를 입력하세요.</string>
    <string name="my_page_book_add_invite_check_code_title">가계부 코드 입력</string>
    <string name="my_page_book_add_invite_check_code_info">가계부에 입장하기 위해\n초대 받은 가계부의 코드를 입력하세요.</string>
    <string name="my_page_book_add_invite_check_code_input_hint">코드를 입력하세요.</string>
    <string name="my_page_book_add_invite_check_code_complete_button_text">추가하기</string>
    <string name="book_setting_bottom_carryinfo_title">이월 설정</string>
    <string name="book_setting_bottom_carryinfo_total_income">지난달 총수입</string>
    <string name="book_setting_bottom_carryinfo_total_outcome">지난달 총지출</string>
    <string name="book_setting_bottom_carryinfo_next_start_money">다음달 시작금액</string>
    <string name="book_setting_bottom_carryinfo_info">이월 설정은 지난 달에 기록된 수입에서 지출을 차감한 금액을\n다음 달로 넘기는 기능입니다.\n\n남은 금액이 마이너스인 경우 지출로 기록되며\n플러스인 경우는 수입으로 기록 됩니다.</string>
    <string name="book_setting_bottom_carryinfo_on">ON</string>
    <string name="book_setting_bottom_carryinfo_off">OFF</string>
</resources>