<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/homeFragment"
        android:icon="@drawable/item_home_selector"
        android:title="@string/bottom_navigation_home" />

    <item android:id="@+id/analysisFragment"
        android:icon="@drawable/item_leaderboard_selector"
        android:title="@string/bottom_navigation_analysis" />

    <item android:id="@+id/add"
        android:title="" />

    <item android:id="@+id/settleUpFragment"
        android:icon="@drawable/item_calculate_selector"
        android:title="@string/bottom_navigation_calculate" />

    <item android:id="@+id/mypageFragment"
        android:icon="@drawable/item_person_selector"
        android:title="@string/bottom_navigation_mypage" />

</menu>