<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.aos.floney.view.password.find.PasswordFindViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context=".view.password.find.PasswordFindActivity">

        <ImageView
            android:id="@+id/iv_icon_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:onClick="@{() -> vm.onClickedPreviousBtn()}"
            android:layout_marginTop="22dp"
            android:background="@drawable/icon_grayscale6_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/find_pw"
            android:textColor="@color/grayscale1"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@id/iv_icon_back"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_back" />

        <TextView
            android:id="@+id/tv_find_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="3sp"
            android:translationY="-1.34sp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/find_password_text"
            android:textColor="@color/grayscale6"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="@id/tv_find_password"
            app:layout_constraintTop_toBottomOf="@id/tv_find_password" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_radius_12_solid_greyscale_12_stroke_greyscale_10"
            android:fontFamily="@font/pretendard_regular"
            android:hint="@string/sign_up_request_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:text="@={vm.email}"
            android:textColor="@color/grayscale2"
            android:textSize="14dp"
            android:textColorHint="@color/grayscale6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_find_password_text"
            app:layout_constraintTop_toBottomOf="@id/tv_find_password_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_radius_12_solid_primary1"
            android:fontFamily="@font/pretendard_bold"
            android:onClick="@{() -> vm.onClickSendTempPassword()}"
            android:text="@string/send_temp_password"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>