<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.aos.floney.view.mypage.bookadd.codeinput.MyPageBookAddInviteCheckViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.mypage.bookadd.codeinput.MyPageBookAddInviteCheckFragment">

        <ImageView
            android:id="@+id/iv_icon_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:onClick="@{() -> vm.onClickPreviousPage()}"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_invite_check_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="-5sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="106dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/my_page_book_add_invite_check_code_title"
            android:textColor="@color/grayscale1"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_invite_check_code_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="3sp"
            android:translationY="-1.34sp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/my_page_book_add_invite_check_code_info"
            android:textColor="@color/grayscale6"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="@id/tv_invite_check_code_title"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_check_code_title" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_radius_12_solid_greyscale_12_stroke_greyscale_10"
            android:fontFamily="@font/pretendard_regular"
            android:hint="@string/my_page_book_add_invite_check_code_input_hint"
            android:paddingStart="20dp"
            android:text="@={vm.code}"
            android:textColor="@color/grayscale2"
            android:textSize="14dp"
            android:maxLength="8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_invite_check_code_info" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_input_complete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="38dp"
            android:background="@drawable/custom_radius_12_solid_primary1"
            android:fontFamily="@font/pretendard_bold"
            android:onClick="@{() -> vm.onClickInputComplete()}"
            android:text="@string/my_page_book_add_invite_check_code_complete_button_text"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/et_code"
            app:layout_constraintStart_toStartOf="@id/et_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>