<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.aos.floney.view.book.setting.carryinfo.BookSettingCarryinfoViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_sheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_book_setting_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_sheet_book_setting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/book_setting_bottom_carryinfo_title"
                android:textColor="@color/grayscale1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_book_setting_title">

                <TextView
                    android:id="@+id/tv_last_month_income"
                    android:layout_width="96dp"
                    android:layout_height="36dp"
                    android:background="@drawable/custom_radius_10_solid_background_2"
                    android:gravity="center"
                    android:text="@string/book_setting_bottom_carryinfo_total_income"
                    android:textColor="@color/grayscale2"
                    android:textSize="11dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_last_month_expense" />

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_minus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_last_month_expense"
                    app:layout_constraintStart_toEndOf="@+id/tv_last_month_income"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_last_month_expense"
                    android:layout_width="96dp"
                    android:layout_height="36dp"
                    android:background="@drawable/custom_radius_10_solid_background_2"
                    android:gravity="center"
                    android:text="@string/book_setting_bottom_carryinfo_total_outcome"
                    android:textColor="@color/grayscale2"
                    android:textSize="11dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_next_month_start"
                    app:layout_constraintStart_toEndOf="@+id/tv_last_month_income"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_equal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_next_month_start"
                    app:layout_constraintStart_toEndOf="@+id/tv_last_month_expense"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_next_month_start"
                    android:layout_width="96dp"
                    android:layout_height="36dp"
                    android:background="@drawable/custom_radius_10_solid_primary5"
                    android:gravity="center"
                    android:text="@string/book_setting_bottom_carryinfo_next_start_money"
                    android:fontFamily="@font/pretendard_semibold"
                    android:textColor="@color/white"
                    android:textSize="11dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_bottom_sheet_book_setting_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pretendard_regular"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.84sp"
                android:text="@string/book_setting_bottom_carryinfo_info"
                android:textColor="@color/grayscale2"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="@+id/bottom_sheet_book_setting_title"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/tv_bottom_sheet_book_setting_info">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()-> vm.onClickedCarryInfoNo()}"
                    android:background="@{!vm.carryInfo ? @drawable/custom_radius_12_solid_white_stroke_primary_2 : @drawable/custom_radius_12_solid_white_stroke_greyscale_8}"
                    android:gravity="center"
                    android:text="@string/book_setting_bottom_carryinfo_off"
                    android:textColor="@{!vm.carryInfo ? @color/primary2 : @color/grayscale8}"
                    android:textSize="14dp" />


                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@{vm.carryInfo ? @drawable/custom_radius_12_solid_white_stroke_primary_2 : @drawable/custom_radius_12_solid_white_stroke_greyscale_8}"
                    android:gravity="center"
                    android:text="@string/book_setting_bottom_carryinfo_on"
                    android:onClick="@{()-> vm.onClickedCarryInfoYes()}"
                    android:textColor="@{vm.carryInfo ? @color/primary2 : @color/grayscale8}"
                    android:textSize="14dp" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>